--- a/pipes/users.yaml
+++ b/pipes/users.yaml
@@ -12,3 +12,12 @@ resources:
       type: github
       name: amolanol5/azd
       endpoint: amolanol5
+
+extends:
+  template: test.yaml@templates
+  parameters:
+    test: $(test)
+    deployConfig:
+      - ${{ if eq(variables['Build.Reason'], 'Manual') }}: 
+          - stage: Desarrollo
+            test: 'test'
