--- a/pipes/users.yaml
+++ b/pipes/users.yaml
@@ -1,10 +1,10 @@
 trigger:
   branches:
     include:
-      - main
+      - master
 
 pr:
-  - main
+  - master
 
 resources:
   repositories:
@@ -32,3 +32,7 @@ extends:
 
       - ${{ if eq(parameters.environment, 'UAT') }}:
           - stage: UAT 
+
+      - ${{ if and(eq(variables['Build.SourceBranchName'], 'master'), ne(variables['Build.Reason'], 'PullRequest'), ne(variables['Build.Reason'], 'Manual')) }}:
+          - stage: PROD           
+
