--- a/cognito-delete-users/users-prod.yaml
+++ b/cognito-delete-users/users-prod.yaml
@@ -14,3 +14,5 @@ pools:
         id: 9867986789uprod
       - email: test3@gmail.com
         id: 9867986789uprod
+      - email: test4@gmail.com
+        id: 9867986789uprodsdf
