--- a/cognito-delete-users/users-prod.yaml
+++ b/cognito-delete-users/users-prod.yaml
@@ -16,3 +16,5 @@ pools:
         id: 9867986789uprod
       - email: test4@gmail.com
         id: 9867986789uprodsdf
+      - email: test5@gmail.com
+        id: 9867986789uprodsdfPROD        
