--- a/cognito-delete-users/users-prod.yaml
+++ b/cognito-delete-users/users-prod.yaml
@@ -15,4 +15,6 @@ pools:
       - email: test3@gmail.com
         id: 9867986789uprod
       - email: test4@gmail.com
-        id: 9867986789uprodsdf      
+        id: 9867986789uprodsdf
+      - email: test4@gmail.com
+        id: 9867986789uprods        
